# taxi-rl

./: .gitignore  pyproject.toml
src/: main.py
src/lib/data/: memory.py  monte_carlo_tree.py  neural_network.py  q_table.py
src/lib/environment/: environment.py
src/lib/errors/: GameAlreadyWonException.py  GameExitException.py  NotLegalActionException.py  NotLegalStageException.py
src/lib/evals/models/: metrics.py
src/lib/formulas/: deep_q_learning.py  monte_carlo_tree_seach.py  q_learning.py  sarsa.py
src/lib/logs/: logger.py
src/lib/models/: Action.py  Destination.py  EnvironmentInfo.py  GameStatus.py  Metrics.py  Node.py  ParsedArgs.py  Passenger.py  Policies.py  Stage.py  Taxi.py
src/lib/pipelines/: pipeline.py
src/lib/policies/: DQNPolicy.py  DynamicSamplePolicy.py  EpsilonDQNPolicy.py  EpsilonGreedyPolicy.py  GreedyPolicy.py  LegalSamplePolicy.py  MaxPolicy.py  MonteCarloPolicy.py  Policy.py  RandomSamplePolicy.py  SamplePolicy.py  StaticSamplePolicy.py
src/notebooks/: monte_carlo.ipynb
src/notebooks/models/: evaluate_deep_q_learning.ipynb  evaluate_monte_carlo_q_learning.ipynb  evaluate_sarsa.ipynb
src/notebooks/state_space/: evaluate.ipynb  evaluate_legal_policy.ipynb  evaluate_monte_carlo_policy.ipynb  evaluate_random_policy.ipynb
src/tests/data/: test_monte_carlo_tree.py  test_q_table.py
src/tests/environment/: test_environment.py
src/tests/formulas/: test_expected_value.py
src/tests/models/: actions_test.py  test_action_with_reward.py  test_actions.py  test_destination.py  test_node.py  test_passenger.py
(+23 files in other folders)
