[tool.poetry]
name = "aia-902"
version = "0.1.0"
description = ""
authors = ["Romain Mularczyk <romain.mularczyk@gmail.com>"]
readme = "README.md"
packages = [{include = "aia_902"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jupyterlab = "^4.1.2"
gymnasium = "^0.29.1"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
tqdm = "^4.66.2"
networkx = "^3.3"
pytest = "^8.2.0"
pydantic = "^2.7.2"
graphviz = "^0.20.3"
torch = "2.0.0"
numpy = "1.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
